development-runs/314/k8s/validate/resources/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: sme-app
  labels:
    io.kompose.service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - name: frontend
          image: ralfx22/sme-frontend:latest
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
