development-runs/314/k8s/validate/resources/quotes-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: quotes
  namespace: sme-app
  labels:
    io.kompose.service: quotes
spec:
  type: ClusterIP
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    io.kompose.service: quotes
